assets/cron-svc-vwh.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: deny-batch-create
webhooks:
- name: deny.batch.create
  rules:
  - apiGroups:
    - "batch"
    apiVersions:
    - v1beta1
    operations:
    - "CREATE"
    resources:
    - cronjobs
  # Default failurePolicy is not fail.
  failurePolicy: Fail
  clientConfig:
    service:
      namespace: default
      name: kube-vwh-service
      path: /deny-cronjob-create
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDVENDQWZHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFtTVJJd0VBWURWUVFMRXdsdmNHVnUKYzJocFpuUXhFREFPQmdOVkJBTVRCM0p2YjNRdFkyRXdIaGNOTVRrd01qQXhNVGcwTkRReVdoY05Namt3TVRJNQpNVGcwTkRReVdqQW1NUkl3RUFZRFZRUUxFd2x2Y0dWdWMyaHBablF4RURBT0JnTlZCQU1UQjNKdmIzUXRZMkV3CmdnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURXcUJnSmp2cm5qTXljWVVlQ0xZd0gKNnpPL0lmMmdINFdKY3dYOEhrOEVXdVdsV29KeG9XL1drRk1YZGVtUmdvTlB6dFl5TjU5aSs2L0VtYjN0NUlIRwpNTEZmYUFqWlU0UX [...]
