assets/vwh.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: deny-pods-create
webhooks:
- name: deny.pods.create
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  # Default failurePolicy is not fail.
  failurePolicy: Fail
  clientConfig:
    url: "https://testing.michaelgugino.com/always-deny"
    # base64 encoded contents of a .pem cert file.
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR6akNDQXJhZ0F3SUJBZ0lKQUswbzVJaE1jNDc3TUEwR0NTcUdTSWIzRFFFQkN3VUFNSHd4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpHVERFVk1CTUdBMVVFQnd3TVNtRmphM052Ym5acGJHeGxNUTh3RFFZRApWUVFLREFaTlIwTnZjbkF4RlRBVEJnTlZCQU1NRERFNU1pNHhOamd1TXprdU1URWhNQjhHQ1NxR1NJYjNEUUVKCkFSWVNiV2QxWjJsdWIwQnlaV1JvWVhRdVkyOXRNQjRYRFRFNU1ERXlNVEUwTkRreU9Wb1hEVEkwTURFeU1ERTAKTkRreU9Wb3dmREVMTUFrR0ExVUVCaE1DVlZNeEN6QUpCZ05WQkFnTUFrWk1NUlV3RXdZRFZRUUhEQXhLWVdOcgpjMjl1ZG1sc2JHV [...]
